// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`gux-avatar #render component with image 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image"></slot>
    </div>
  </mock:shadow-root>
  <img alt="John Doe Image" slot="image" src="https://i.pravatar.cc/300">
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (1) for valid markup 1`] = `
<gux-avatar-beta name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (2) for valid markup 1`] = `
<gux-avatar-beta name="JohnDoe">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="JohnDoe">
          Jo
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (3) for valid markup 1`] = `
<gux-avatar-beta name="山田 太郎">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="山田 太郎">
          山太
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (4) for valid markup 1`] = `
<gux-avatar-beta name="이 영수">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="이 영수">
          이영
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render component with name type (5) for valid markup 1`] = `
<gux-avatar-beta name="邓 小平">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="邓 小平">
          邓小
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "0" 1`] = `
<gux-avatar-beta accent="0" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-0 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "1" 1`] = `
<gux-avatar-beta accent="1" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-1 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "2" 1`] = `
<gux-avatar-beta accent="2" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-2 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "3" 1`] = `
<gux-avatar-beta accent="3" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-3 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "4" 1`] = `
<gux-avatar-beta accent="4" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-4 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "5" 1`] = `
<gux-avatar-beta accent="5" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-5 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "6" 1`] = `
<gux-avatar-beta accent="6" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-6 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "7" 1`] = `
<gux-avatar-beta accent="7" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-7 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "8" 1`] = `
<gux-avatar-beta accent="8" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-8 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "9" 1`] = `
<gux-avatar-beta accent="9" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-9 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "10" 1`] = `
<gux-avatar-beta accent="10" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-10 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "11" 1`] = `
<gux-avatar-beta accent="11" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-11 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "12" 1`] = `
<gux-avatar-beta accent="12" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-12 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "auto" 1`] = `
<gux-avatar-beta accent="auto" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-3 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "default" 1`] = `
<gux-avatar-beta accent="default" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different accents should work as expected for "invalid-accent" 1`] = `
<gux-avatar-beta accent="invalid-accent" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-invalid-accent gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "large" 1`] = `
<gux-avatar-beta name="John Doe" size="large">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium" 1`] = `
<gux-avatar-beta name="John Doe" size="medium">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-medium">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "medium-rare" 1`] = `
<gux-avatar-beta name="John Doe" size="medium-rare">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-medium-rare">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "small" 1`] = `
<gux-avatar-beta name="John Doe" size="small">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-small">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar #render different sizes should work as expected for "xsmall" 1`] = `
<gux-avatar-beta name="John Doe" size="xsmall">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-xsmall">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar changes to attributes after initial load should be reflected in DOM should update accent attribute 1`] = `
<gux-avatar-beta accent="6" name="John Doe">
  <mock:shadow-root>
    <div class="gux-accent-6 gux-avatar gux-large">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;

exports[`gux-avatar changes to attributes after initial load should be reflected in DOM should update size attribute 1`] = `
<gux-avatar-beta name="John Doe" size="small">
  <mock:shadow-root>
    <div class="gux-accent-default gux-avatar gux-small">
      <slot name="image">
        <abbr title="John Doe">
          JD
        </abbr>
      </slot>
    </div>
  </mock:shadow-root>
</gux-avatar-beta>
`;
